--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Prerequisites
 *.d
+.*
+*.root
 
 # Compiled Object files
 *.slo
@@ -10,7 +12,7 @@
 # Precompiled Headers
 *.gch
 *.pch
-
+*.pcm
 # Compiled Dynamic libraries
 *.so
 *.dylib
@@ -25,6 +27,7 @@
 *.la
 *.a
 *.lib
+
 
 # Executables
 *.exe
