Adding the changes for V0 search with sigmoid : sigmoidV0

--- a/Isolation/test/Makefile
+++ b/Isolation/test/Makefile
@@ -7,6 +7,9 @@ INCPATH     = include/
 TARGET		= isolationAnalysis
 all:	$(TARGET) 
 
+isolationAnalysisSlim : src/IsolationAnalysisSlim.cc 
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
+
 isolationAnalysis : src/IsolationAnalysis.cc 
 	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
 
