--- a/Isolation/test/Makefile
+++ b/Isolation/test/Makefile
@@ -16,5 +16,14 @@ evalOptions : src/evalOptions.cc
 applyIsolation : src/ApplyIsolation.cc 
 	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
 
+L1EGRatePlotter : src/L1EGRatePlotter.cc 
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
+
+L1EGRatePlotterData : src/L1EGRatePlotterData.cc 
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
+
+L1EGRatePlotterPUReweig : src/L1EGRatePlotterPUReweig.cc
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
+
 clean :
 	@rm *.exe
