--- a/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
+++ b/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
@@ -6,9 +6,11 @@ PUReweightingHistFile=@@PWD/CalibFiles/ratio_file.root
 EtLUTFileName=@@PWD/data/compressionLuts/egCompressELUT_4bit_v4.txt
 EtaLUTFileName=@@PWD/data/compressionLuts/egCompressEtaLUT_4bit_v4.txt
 NTTLUTFileName=@@PWD/data/compressionLuts/tauCompressnTTLUT_5bit_v8.txt
+SCEtaLUTFileName=@@PWD/data/compressionLuts/egSuperCompressEtaLUT_1bit_v4.txt
 nTTRange=1
 LUTProgressionOptions=@@OPTIONS
 MaxEntriesForRate=-1
-MaxEntriesForEfficency=2500000
+MaxEntriesForEfficency=-1
 FixedRate=16.7
 DoubleEGFixedRate=3.9
+ReportEvery=5000
