dev for latest optimization usin 122X samples in 123x_pre6

--- a/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
+++ b/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
@@ -1,4 +1,4 @@
-NtupleFileNameRate=@@PWD/config/Ntuple_rate.txt
+NtupleFileNameRate=@@PWD/config/Ntuple_rate2.txt
 NtupleFileNameTurnOn=@@PWD/config/Ntuple_turnon.txt
 OptionsFileName=@@OPT_FNAME
 OutputFileName=HistgramFile_step3step4_12XnewLayer1_@@TAG.root
@@ -7,8 +7,8 @@ EtaLUTFileName=@@PWD/data/compressionLuts/egCompressEtaLUT_4bit_v4.txt
 NTTLUTFileName=@@PWD/data/compressionLuts/tauCompressnTTLUT_5bit_v8.txt
 nTTRange=1
 LUTProgressionOptions=@@OPTIONS
-MaxEntriesForRate=-1
-MaxEntriesForEfficency=-1
+MaxEntriesForRate=4000000
+MaxEntriesForEfficency=1000
 FixedRate=16.7
 DoubleEGFixedRate=3.9
 ReportEvery=5000
