--- a/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
+++ b/Isolation/test/misc/Par_ApplyIsolation.dat.tpl.cfg
@@ -10,7 +10,9 @@ SCEtaLUTFileName=@@PWD/data/compressionLuts/egSuperCompressEtaLUT_1bit_v4.txt
 nTTRange=1
 LUTProgressionOptions=@@OPTIONS
 MaxEntriesForRate=-1
-MaxEntriesForEfficency=200000
+MaxEntriesForEfficency=-1
 FixedRate=16.7
 DoubleEGFixedRate=3.9
 ReportEvery=5000
+EtMin=5
+EtMax=55
