--- a/Isolation/test/Makefile
+++ b/Isolation/test/Makefile
@@ -16,6 +16,12 @@ evalOptions : src/evalOptions.cc
 applyIsolation : src/ApplyIsolation.cc 
 	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
 
+applyIsolation_plotter : src/ApplyIsolation_plotter.cc 
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
+
+exportIsolation : src/ExportIsolation.cc
+	$(CXX) $(CXXFLAGS) -I$(INCPATH) -g -o $@.exe $<  $(LIBS)
+
 L1EGRatePlotter : src/L1EGRatePlotter.cc 
 	$(CXX) $(CXXFLAGS) -I$(INCPATH) -o $@.exe $<  $(LIBS)
 
